# drf_tutorial

./: README.md  pyproject.toml
snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
tutorial/: settings.py  urls.py
