[tool.poetry]
name = "django-rest-framework4"
version = "0.1.0"
description = ""
authors = ["Kk <iankk0806@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
pygments = "^2.18.0"
httpie = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
